# pyauthenticator

./: .coveragerc  .coveralls.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.binder/: environment.yml  postBuild
.ci_support/: environment-docs.yml  environment.yml
.github/workflows/: black.yml  coverage.yml  deploy.yml  mypy.yml  pipeline.yml  pypicheck.yml  unittest.yml
docs/: _config.yml  _toc.yml  implementation.ipynb  introduction.md  summary.md  technology.ipynb
pyauthenticator/: __init__.py  __main__.py  _config.py  _core.py  _user.py  _version.py  api.py  cmd.py  config.py  core.py  share.py
src/pyauthenticator/: __init__.py  __main__.py  _cmd.py  _config.py  _core.py  _user.py  api.py
tests/: test_api.py  test_authenticator_core.py  test_cmd.py  test_config.py  test_core.py  test_share.py  test_user.py  test_user_interface.py
twofactorcmd/: __init__.py  _version.py  cmd.py
