[build-system]
requires = [
    "hatchling==1.27.0",
    "hatch-vcs==0.5.0",
    "pyotp==2.9.0",
    "qrcode==8.2",
    "pyzbar==0.1.9",
    "pillow==12.1.0",
]
build-backend = "hatchling.build"

[project]
name = "pyauthenticator"
dynamic = ["version"]
description = "Similar to the Google authenticator just written in python."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Jan Janssen", email = "jan.janssen@outlook.com" },
]
keywords = ["authenticator", "2FA", "MFA"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "pyotp==2.9.0",
    "qrcode==8.2",
    "pyzbar==0.1.9",
    "pillow==12.1.0",
]

[project.urls]
Homepage = "https://github.com/jan-janssen/pyauthenticator"
Documentation = "https://github.com/jan-janssen/pyauthenticator/blob/master/README.md"
Source = "https://github.com/jan-janssen/pyauthenticator"
Tracker = "https://github.com/jan-janssen/pyauthenticator/issues"

[project.scripts]
pyauthenticator = "pyauthenticator._cmd:command_line_parser"

[tool.hatch.build]
include = [
    "src/pyauthenticator"
]

[tool.hatch.build.hooks.vcs]
version-file = "src/pyauthenticator/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/pyauthenticator"
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/pyauthenticator"
]

[tool.hatch.version]
source = "vcs"
path = "src/pyauthenticator/_version.py"

[tool.coverage.run]
source = ["pyauthenticator"]
command_line = "-m unittest discover tests"
